--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,11 @@
     <script src="./js/script.js"></script>
   </head>
   <body>
-    <div class="navbar bg-base-200 flex justify-between">
+    <div class="flex justify-between navbar">
       <div class="">
-        <a class="btn btn-ghost text-xl">PokeShop</a>
+        <a class="text-xl btn btn-ghost" href=""
+          ><span style="color: white">PokeShop</span></a
+        >
       </div>
       <div class="">
         <img src="./img/icono.png" width="45" height="45" alt="icon" />
@@ -30,10 +32,10 @@
             <div class="indicator">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5"
+                class="w-5 h-5"
                 fill="none"
                 viewBox="0 0 24 24"
-                stroke="currentColor"
+                stroke="white"
               >
                 <path
                   stroke-linecap="round"
@@ -47,73 +49,91 @@
           </label>
           <div
             tabindex="0"
-            class="mt-3 z-[1] card card-compact dropdown-content w-52 bg-base-200 shadow"
+            class="mt-3 z-[1] card card-compact dropdown-content w-52 sombra-carrito"
           >
             <div class="card-body">
-              <span class="font-bold text-lg">8 Items</span>
-              <span class="text">Subtotal: $999</span>
+              <span class="text-lg font-bold"></span>
+              <span class="flex gap-3 text"></span>
               <div class="card-actions">
-                <button class="btn btn-primary btn-sm btn-block">
-                  View cart
+                <button class="btn btn-sm btn-block color-boton">
+                  Comprar
                 </button>
               </div>
             </div>
           </div>
         </div>
+
         <div class="dropdown dropdown-end">
-          <label tabindex="0" class="btn btn-ghost btn-circle avatar">
-            <ion-icon name="person" class="h-5 w-5"></ion-icon>
+          <label
+            tabindex="0"
+            class="btn btn-ghost btn-circle avatar"
+            style="color: white"
+          >
+            <ion-icon name="log-in" class="w-5 h-5"></ion-icon>
           </label>
           <ul
             tabindex="0"
             class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-200 rounded-box w-52"
           >
-            <li>
-              <a href="">Perfil</a>
-            </li>
+            <input
+              type="text"
+              placeholder="Type here"
+              class="w-full max-w-xs input input-bordered inicio-sesion"
+            />
             <li><a href="">Cerrar Sesión</a></li>
           </ul>
         </div>
       </div>
     </div>
-    <div
-      class="hero min-h-screen"
-      style="
-        background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);
-      "
-    >
-      <div class="hero-overlay bg-opacity-80"></div>
-      <div class="hero-content text-center text-neutral-content">
-        <div class="max-w-md">
-          <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-          <p class="mb-5">
-            Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-            excepturi exercitationem quasi. In deleniti eaque aut repudiandae et
-            a id nisi.
-          </p>
-          <button class="btn btn-primary">Get Started</button>
+    <div class="fondo-pokemon">
+      <div class="video-container">
+        <video
+          autoplay
+          muted
+          loop
+          id="myVideo"
+          style="position: absolute; z-index: -1"
+        >
+          <source src="./img/sr animated.mp4" type="video/mp4" />
+          Your browser does not support HTML5 video.
+        </video>
+      </div>
+
+      <div class="hero">
+        <div class="text-center hero-content">
+          <div class="max-w-md">
+            <h1 class="mt-6 text-5xl font-bold">
+              Bienvenido a <span class="titulo-pagina">PokeShop</span>
+            </h1>
+            <p class="py-6">
+              Compra tus pokemones favoritos y disfruta de la experiencia
+            </p>
+            <ion-icon
+              name="chevron-down"
+              class="text-3xl animacion-flecha"
+            ></ion-icon>
+          </div>
         </div>
       </div>
+
+      <div
+        id="pokemons"
+        class="flex flex-wrap self-center justify-center gap-5"
+        style="margin: 0 auto; max-width: 900px; padding: 20px"
+      ></div>
+      <div class="grid grid-cols-2 join paginacion">
+        <button class="text-2xl border-white join-item btn btn-outline">
+          <ion-icon name="arrow-back" class="text-white"></ion-icon>
+        </button>
+        <button class="text-2xl border-white join-item btn btn-outline">
+          <ion-icon name="arrow-forward" class="text-white"></ion-icon>
+        </button>
+      </div>
     </div>
-    <div id="pokemons" class="flex flex-wrap justify-center self-center gap-4">
-      <div id="frente" class="flex flex-wrap justify-start self-center"></div>
-      <div id="espalda" class="flex flex-wrap justify-end self-center"></div>
-    </div>
-    <footer class="footer footer-center p-10 bg-base-200 text-primary-content">
+
+    <footer class="p-10 footer footer-center text-primary-content">
       <aside>
-        <svg
-          width="50"
-          height="50"
-          viewBox="0 0 24 24"
-          xmlns="http://www.w3.org/2000/svg"
-          fill-rule="evenodd"
-          clip-rule="evenodd"
-          class="inline-block fill-current"
-        >
-          <path
-            d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"
-          ></path>
-        </svg>
+        <img src="./img/icono.png" alt="Icono" width="60" />
         <p class="font-bold">
           PokeAPI Industries Ltd. <br />Providing Pokemon data since 2004
         </p>
