--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>PokeShop</title>
+    <link rel="icon" href="./img/icon.svg" type="image/x-icon" />
     <link rel="stylesheet" href="./css/output.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <script
@@ -122,11 +123,11 @@
         style="margin: 0 auto; max-width: 900px; padding: 20px"
       ></div>
       <div class="grid grid-cols-2 join paginacion">
-        <button class="text-2xl border-white join-item btn btn-outline">
-          <ion-icon name="arrow-back" class="text-white"></ion-icon>
+        <button class="text-2xl join-item btn btn-outline">
+          <ion-icon name="arrow-back"></ion-icon>
         </button>
-        <button class="text-2xl border-white join-item btn btn-outline">
-          <ion-icon name="arrow-forward" class="text-white"></ion-icon>
+        <button class="text-2xl join-item btn btn-outline">
+          <ion-icon name="arrow-forward"></ion-icon>
         </button>
       </div>
     </div>
