--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
           id="myVideo"
           style="position: absolute; z-index: -1"
         >
-          <source src="./img/sr animated.mp4" type="video/mp4" />
+          <source src="./img/fondo-animado.mp4" type="video/mp4" />
           Your browser does not support HTML5 video.
         </video>
       </div>
