--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
       </div>
     </div>
     <div class="fondo-pokemon">
-      <div class="video-container">
+      <div class="video-container" id="videoContainer">
         <video
           autoplay
           muted
