--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
             tabindex="0"
             class="mt-3 z-[1] card card-compact dropdown-content w-52 sombra-carrito"
           >
-            <div class="card-body">
+            <div class="card-body" style="background-color: #7bd6ff">
               <span class="text-lg font-bold"></span>
               <span class="flex gap-3 text"></span>
               <div class="card-actions">
@@ -74,7 +74,8 @@
           </label>
           <ul
             tabindex="0"
-            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-200 rounded-box w-52"
+            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-200 rounded-box w-52 sombra-carrito"
+            style="background-color: #7bd6ff"
           >
             <input
               type="text"
@@ -86,6 +87,7 @@
         </div>
       </div>
     </div>
+
     <div class="fondo-pokemon">
       <div class="video-container" id="videoContainer">
         <video
@@ -100,7 +102,7 @@
         </video>
       </div>
 
-      <div class="hero">
+      <div class="bg-transparent hero">
         <div class="text-center hero-content">
           <div class="max-w-md">
             <h1 class="mt-6 text-5xl font-bold">
@@ -131,7 +133,6 @@
         </button>
       </div>
     </div>
-
     <footer class="p-10 footer footer-center text-primary-content">
       <aside>
         <img src="./img/icono.png" alt="Icono" width="60" />
