--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
                   d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
                 />
               </svg>
-              <!-- <span class="badge badge-sm indicator-item">12</span> -->
+              <span class="badge badge-sm indicator-item glass">0</span>
             </div>
           </label>
           <div
@@ -53,8 +53,11 @@
             class="mt-3 z-[1] card card-compact dropdown-content w-52 sombra-carrito"
           >
             <div class="card-body" style="background-color: #7bd6ff">
+              <div class="text-2xl">Tu carrito</div>
               <span class="text-lg font-bold"></span>
+
               <span class="flex gap-3 text"></span>
+
               <div class="card-actions">
                 <button class="btn btn-sm btn-block color-boton">
                   Comprar
